# PortfolioCopilot-Backend

./: main.py  manage.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
investment_agent_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
research/: ai_agent.py  consumer.py  models.py  redis.py  serializers.py  tasks.py  urls.py  views.py
research/migrations/: 0001_initial.py
tools/: base.py  open_ai_utils.py  registry.py  schemas.py  service.py
tools/implementations/: fundamentals.py  price_history.py  volatility.py
