[project]
name = "investment-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "redis>=7.2.0",
]
