[project]
name = "investment-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "celery-stubs>=0.1.3",
    "django>=6.0.2",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-stubs>=5.2.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.8",
    "dotenv>=0.9.9",
    "openai-agents>=0.12.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "redis>=7.2.0",
    "yfinance>=1.2.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disable_error_code = ["var-annotated"]

[tool.django-stubs]
django_settings_module = "investment_agent_backend.settings"

[dependency-groups]
dev = [
    "django-extensions>=4.1",
]
